# NWHypergraph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NWhyUserGuide.rst  PybindUserGuide.rst  README.md  setup.cfg  setup.py
.github/workflows/: build_cmake.yml  matrix_test.yml
bench/: CMakeLists.txt  Log.hpp  Readme.md  adjoinbfs.cpp  adjoincc.cpp  common.hpp  config.h.in  hyperbfs.cpp  hyperbfsrelabel.cpp  hypercc.cpp  hyperccrelabel.cpp  hyperstats.cpp  imdb.cpp  mmio_to_hyadj.cpp  relabelbfs.cpp  relabelcc.cpp  soverlapbc.cpp  soverlapbfs.cpp  soverlapcc.cpp  soverlapsssp.cpp  toplex.cpp  toplexes.cpp
cmake/: Catch2.cmake  Date copy.cmake  Date.cmake  Docopt.cmake  FindFilesystem.cmake  FindTBB.cmake  NWGraph.cmake
docker/: Dockerfile.gcc10.2  Dockerfile.gcc11
docs/graffle/: hypergraph.graffle
include/: CMakeLists.txt  convert_to_s_overlap.hpp  edge_list_hy.hpp  hypergraph_io.hpp  mmio_hy.hpp  s_overlap.hpp
include/algorithms/: adjoin_x.hpp  hyper_breadth_first_search.hpp  hyper_connected_components.hpp  relabel_x.hpp  s_breadth_first_search.hpp  s_connected_components.hpp  slinegraph_adjoin.hpp  slinegraph_efficient.hpp  slinegraph_frontier.hpp  slinegraph_kij.hpp  slinegraph_map.hpp  slinegraph_naive.hpp  to_two_graph_efficient.hpp  to_two_graph_frontier.hpp  to_two_graph_map.hpp  toplexes.hpp
include/algorithms/experimental/: slinegraph_adjoin.hpp  slinegraph_efficient.hpp  slinegraph_map.hpp
include/containers/: compressed_hy.hpp  edge_list_hy.hpp  nwhypergraph.hpp  slinegraph.hpp
include/generators/: configuration_model.hpp
include/io/: csv_io.hpp  hypergraph_io.hpp  loader.hpp  mmio.hpp  mmio_hy.hpp
include/util/: slinegraph_helper.hpp
python/: CMakeLists.txt  config.h.in  connected_components.py  nwhy.cpp  pow_law_generator.py  rmat-generator-new.py
python/test/: nwhypergraph.py  sbc.py  slinegraphs.py  test_apis.py  test_convert_to_s_overlap.py
test/: CMakeLists.txt  adjacency_test.cpp  toplexes_eg.cpp
tools/: CMakeLists.txt  IMDB_to_mtx.cpp  common.hpp  hyadj_to_mmio.cpp  hypergenerator.cpp  hyperstats.cpp  mmio_to_hyadj.cpp  mmio_to_mmio.cpp  mtx_to_binary.cpp
